aman ga disana jal?

--- a/card.html
+++ b/card.html
@@ -11,7 +11,7 @@
         <div class="card">
             <img src="cat2.jpg"alt="" />
             <div class="card-body">
-                <h2>kucing brown</h2>
+                <h2>kucing amabatukam</h2>
                 <h3 style="color:aquamarine;">Rp. 350.000</h3>
                 <button class="btn-grad">beli</button>
             </div>
@@ -20,7 +20,7 @@
             <div class="card">
                 <img src="cat.jpg"alt="" />
                 <div class="card-body">
-                    <h2>kucing belang</h2>
+                    <h2>kucing rusdi</h2>
                     <h3 style="color:rgb(0, 255, 136);">Rp. 100.000</h3>
                     <button class="btn-grad">beli</button>
                 </div>
