oi jal lagi ngapain

--- a/card.html
+++ b/card.html
@@ -30,7 +30,7 @@
             <div class="card">
                 <img src="cat2.webp"alt="" />
                 <div class="card-body">
-                    <h2>kucing angora</h2>
+                    <h2>kucing rehan</h2>
                     <h3 style="color:orange;">Rp. 500.000</h3>
                     <button class="btn-grad">beli</button>
                 </div>
@@ -40,7 +40,7 @@
             <div class="card">
                 <img src="cat.webp"alt="" />
                 <div class="card-body">
-                    <h2>kucing royal</h2>
+                    <h2>kucing karam</h2>
                     <h3 style="color:orange;">Rp. 250.000</h3>
                     <button class="btn-grad">beli</button>
                 </div>
@@ -52,7 +52,7 @@
         <div class="card">
             <img src="cat6.webp"alt="" />
             <div class="card-body">
-                <h2>kucing white </h2>
+                <h2>kucing mahal </h2>
                 <h3 style="color:orange;">Rp. 400.000</h3>
                 <button class="btn-grad">beli</button>
             </div>
