--- a/card.html
+++ b/card.html
@@ -40,7 +40,7 @@
             <div class="card">
                 <img src="cat.webp"alt="" />
                 <div class="card-body">
-                    <h2>kucing karam</h2>
+                    <h2>kucing premium</h2>
                     <h3 style="color:orange;">Rp. 250.000</h3>
                     <button class="btn-grad">beli</button>
                 </div>
