--- a/card.html
+++ b/card.html
@@ -12,7 +12,7 @@
             <img src="cat2.jpg"alt="" />
             <div class="card-body">
                 <h2>kucing brown</h2>
-                <h3 style="color:orange;">Rp. 350.000</h3>
+                <h3 style="color:aquamarine;">Rp. 350.000</h3>
                 <button class="btn-grad">beli</button>
             </div>
         </div>
@@ -21,7 +21,7 @@
                 <img src="cat.jpg"alt="" />
                 <div class="card-body">
                     <h2>kucing belang</h2>
-                    <h3 style="color:orange;">Rp. 100.000</h3>
+                    <h3 style="color:rgb(0, 255, 136);">Rp. 100.000</h3>
                     <button class="btn-grad">beli</button>
                 </div>
             </div>
