lagi bantu temen

--- a/card.html
+++ b/card.html
@@ -61,7 +61,7 @@
             <div class="card">
                 <img src="cat5.webp"alt="" />
                 <div class="card-body">
-                    <h2>kucing mix color nyan</h2>
+                    <h2>kucing mix color</h2>
                     <h3 style="color:orange;">Rp. 300.000</h3>
                     <button class="btn-grad">beli</button>
                 </div>
@@ -71,7 +71,7 @@
             <div class="card">
                 <img src="cat7.webp"alt="" />
                 <div class="card-body">
-                    <h2>kucing gray nyan</h2>
+                    <h2>kucing gray </h2>
                     <h3 style="color:orange;">Rp. 200.000</h3>
                     <button class="btn-grad">beli</button>
                 </div>
