perbaikan dan push

--- a/card.html
+++ b/card.html
@@ -7,6 +7,41 @@
     <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
+    <nav>
+        <ul>
+            <a href="#iklan"><li>promosi</li></a>
+            <li>category</li>
+            <li>produk</li>
+        </ul>
+    </nav>
+
+    <div class="container" id="iklan">
+        <div class="iklan">
+            <img src="" alt="" />
+        </div>
+        <div class="iklan">
+            <img src="" alt="" />
+        </div>
+    </div>
+
+    <div class="container" id="category">
+        <div class="category">
+            <img src="" alt="" />
+        </div>
+        <div class="category">
+            <img src="" alt="" />
+        </div>
+        <div class="category">
+            <img src="" alt="" />
+        </div>
+        <div class="category">
+            <img src="" alt="" />
+        </div>
+        <div class="category">
+            <img src="" alt="" />
+        </div>
+    </div>
+
     <div class="container">
         <div class="card">
             <img src="cat2.jpg"alt="" />
@@ -79,7 +114,7 @@
         </div>
         <div class="container5">
             <div class="card">
-                <img src="cat3.webp"alt="" />
+                <img src="cat3.webp"alt="" />00000000000000
                 <div class="card-body">
                     <h2>kucing orange</h2>
                     <h3 style="color:orange;">Rp. 150.000</h3>
