--- a/card.html
+++ b/card.html
@@ -17,16 +17,19 @@
 
     <div class="container" id="iklan">
         <div class="iklan">
-            <img src="" alt="" />
+            <img src="cat2.jpg" alt="" />
         </div>
         <div class="iklan">
-            <img src="" alt="" />
+            <img src="cat.webp" alt="" />
         </div>
     </div>
 
     <div class="container" id="category">
         <div class="category">
-            <img src="" alt="" />
+            <img src="cat7.webp" alt="" />
+            <div class="container">
+                <p>ikan</p>
+            </div>
         </div>
         <div class="category">
             <img src="" alt="" />
@@ -46,7 +49,7 @@
         <div class="card">
             <img src="cat2.jpg"alt="" />
             <div class="card-body">
-                <h2>kucing amabatukam</h2>
+                <h2>kucing brown</h2>
                 <h3 style="color:aquamarine;">Rp. 350.000</h3>
                 <button class="btn-grad">beli</button>
             </div>
@@ -55,7 +58,7 @@
             <div class="card">
                 <img src="cat.jpg"alt="" />
                 <div class="card-body">
-                    <h2>kucing rusdi</h2>
+                    <h2>kucing belang</h2>
                     <h3 style="color:rgb(0, 255, 136);">Rp. 100.000</h3>
                     <button class="btn-grad">beli</button>
                 </div>
@@ -114,7 +117,7 @@
         </div>
         <div class="container5">
             <div class="card">
-                <img src="cat3.webp"alt="" />00000000000000
+                <img src="cat3.webp"alt="" />
                 <div class="card-body">
                     <h2>kucing orange nyan</h2>
                     <h3 style="color:orange;">Rp. 150.000</h3>
